package splumb;

option java_package = "splumb.protobuf";
option java_outer_classname = "BrokerMsg";
option optimize_for = SPEED;

message Msg {

    enum Type {
        Map = 1;
        String = 2;
        Binary = 3;
    }

    required Type type = 1;
    optional StringMsg stringMsg = 2;
    optional BinaryMsg binaryMsg = 3;
    optional MapMsg mapMsg = 4;
}

message StringMsg {
    required string value = 1;
}

message BinaryMsg {
    required bytes value = 1;
}

message KeyValue {

    enum Type {
        String = 1;
        Int32 = 2;
        Boolean = 3;
    }

    required Type type = 1;
    required string key = 2;
    optional string stringValue = 3;
    optional int32 int32Value = 4;
    optional bool boolValue = 5;
}

message MapMsg {
    repeated KeyValue items = 1;
}

